tests/js_error/source_locations/statement/with/push_with_scope_throws.js
// Errors point to start of with statement
with (null) {}